[package]
name = "luma"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-file-parser = "0.2.0"
global-hotkey = "0.7.0"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced", "svg"] }
unicode-segmentation = "1.12.0"
notify = "8.0.0"
rand = "0.9.1"
serde = "1.0.219"
smol = "2.0.2"
toml = "0.8.23"
log = "0.4.27"
env_logger = "0.11.8"
mlua = { version = "0.10.5", features = ["async", "lua54","send"] }
fend-core = "1.5.6"
