[package]
name = "luma"
version = "0.0.3"
edition = "2024"

[dependencies]
freedesktop-file-parser = "0.2.0"
global-hotkey = "0.7.0"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced", "svg", "tokio", "wgpu", "fira-sans"], default-features = false }
notify = "8.0.0"
rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
serde = "1.0.219"
toml = "0.8.23"
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
mlua = { version = "0.10.5", features = ["async", "lua54","send"] }
fend-core = "1.5.6"
rusqlite = "0.36.0"
reqwest = "0.12.20"
tokio = { version = "1.45.1", features = ["fs", "sync"], default-features = false }
serde_json = "1.0.140"

[features]
tiny-skia = ["iced/tiny-skia"]
